# tgfp-jobs

./: .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  bump_version_and_deploy.sh  create_clans.py  create_dev_env.sh  create_picks.py  deleteme.py  docker-compose.yaml  git_update.sh  login.sh  mongo_backup.py  op.env  pyproject.toml  requirements.txt  schedule_runs.py  stack.env  update_all.py  update_scores.py  update_scores.sh  update_win_loss.py
.github/workflows/: docker-image.yaml
.run/: Doppler change to Development.run.xml  Doppler change to Production.run.xml  create_clans 🟡(dev).run.xml  create_clans 🟢(prd).run.xml  create_dev_env.sh.run.xml  create_picks 🟡(dev).run.xml  create_picks.run.xml  create_prod_env.sh.run.xml  db_backup.run.xml  mention_players_picks_due 🟡(dev).run.xml  mention_players_picks_due 🟢(prd).run.xml  run_task.run.xml  tgfp-jobs.run.xml  update_scores 🟡(dev).run.xml  update_scores 🟢(prd).run.xml  update_win_loss 🟡(dev).run.xml  update_win_loss 🟢(prd).run.xml  update_win_loss.run.xml
backup_db/: README.md  docker-compose.yaml
backup_db/scripts/: __init__.py  db_backup.py  jobs.py
bot/: bot.py  docker-compose.yaml
bots/: mention_players_picks_due.py
create_picks/: README.md  dev.env  docker-compose.yaml
data/: my-crontab
nag_players/: README.me  dev.env  docker-compose.yaml
nginx/: .gitignore  README.md  app.conf  docker-comopose.yaml  docker-compose.yaml  nginx.conf
scripts/: create_picks.py  create_picks.sh  nag_players.py  reload_cronfile.sh  scheduler.py  update_scores.sh  update_win_loss.py  update_win_loss.sh
tgfp_jobs/: README.md  create_dev_env.sh  create_prod_env.sh  docker-compose.yaml  flow.py  old-docker-compose.yaml  op.env  prefect_tutorial.py  stacks.env
todo_move_scripts/: create_clans.py  create_picks.py  scheduler.py  send_message_to_admin.py
update_win_loss/: README.md  docker-compose.yaml
(+131 files in other folders)
