[tool.poetry]
name = "tgfp"
version = "4.2.1"
description = "Scripts to help with the running of The Great Football Pool"
authors = ["John Sturgeon <john.sturgeon@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10.5,<3.11"
doppler-env = "^0.3.0"
tgfp-lib = "^1.14.1"
tgfp-nfl = "^5.0.0"
hikari = "^2.0.0-alpha.111"
arrow = "^1.2.3"
schedule = "^1.1.0"
sentry-sdk = "^1.9.8"
hikari-lightbulb = "^2.2.4"

[tool.poetry.dev-dependencies]
pylint = "^2.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
