[tool.poetry]
name = "tgfp"
version = "5.5.0"
description = "Scripts to help with the running of The Great Football Pool"
authors = ["John Sturgeon <john.sturgeon@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10.5,<3.11"
tgfp-lib = "^2.1.1"
tgfp-nfl = "^5.2.0"
hikari = "^2.0.0.dev111"
arrow = "^1.2.3"
schedule = "^1.1.0"
sentry-sdk = "^1.9.8"
hikari-lightbulb = "^2.2.4"
pylint = "^2.17.5"
listmonk-api = "^0.1.2"
apscheduler = "^3.10.4"
paho-mqtt = "^1.6.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
